feat: add singlePage

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chart.js": "^2.9.3",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
@@ -49,6 +50,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
+    "react-chartjs-2": "^2.8.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
