--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
+    "react-image-fallback": "^8.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
