--- a/client/package.json
+++ b/client/package.json
@@ -98,7 +98,8 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "husky": "^3.0.9",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.3"
   },
   "husky": {
     "hooks": {
