--- a/client/package.json
+++ b/client/package.json
@@ -100,7 +100,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "husky": "^3.0.9",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.3"
   },
   "husky": {
     "hooks": {
